@@ -19,8 +19,6 @@ loom {
             vmArgs "-Dc2me.base.config.override.ioSystem.replaceImpl=true",
                     "-Dc2me.base.config.override.asyncScheduling.enabled=true",
                     "-Dcom.ishland.c2me.mixin.doAudit=true",
-                    "--add-modules",
-                    "jdk.incubator.vector",
                     "--enable-preview",
                     "--enable-native-access=ALL-UNNAMED"
             if (System.getenv("GITHUB_WORKFLOW") != null) {
